--- a/PatchMaker.App/PatchMaker.App.csproj
+++ b/PatchMaker.App/PatchMaker.App.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HelpSpawner.cs" />
+    <Compile Include="HighlightableTreeNode.cs" />
     <Compile Include="IAddPatchForm.cs" />
     <Compile Include="FormExtensions.cs" />
     <Compile Include="PatchForms\AttributePatchTypes.cs" />
