--- a/PatchMaker.App/PatchMaker.App.csproj
+++ b/PatchMaker.App/PatchMaker.App.csproj
@@ -57,6 +57,10 @@
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HelpSpawner.cs" />
+    <Compile Include="HighlightableTreeNode.cs" />
+    <Compile Include="HighlightableTreeView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="IAddPatchForm.cs" />
     <Compile Include="FormExtensions.cs" />
     <Compile Include="PatchForms\AttributePatchTypes.cs" />
