--- a/PatchMaker.Tests/PatchMaker.Tests.csproj
+++ b/PatchMaker.Tests/PatchMaker.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IntegrationTests.cs" />
     <Compile Include="PatchAttributeTests.cs" />
     <Compile Include="PatchInsteadTests.cs" />
+    <Compile Include="PatchNewChildTests.cs" />
     <Compile Include="SetAttributeTests.cs" />
     <Compile Include="PatchGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
