Basic UI for new child patch

--- a/PatchMaker.App/PatchMaker.App.csproj
+++ b/PatchMaker.App/PatchMaker.App.csproj
@@ -82,6 +82,12 @@
     <Compile Include="PatchForms\PatchInsteadForm.Designer.cs">
       <DependentUpon>PatchInsteadForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PatchForms\PatchNewChildForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PatchForms\PatchNewChildForm.Designer.cs">
+      <DependentUpon>PatchNewChildForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PatchGenerationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PatchForms\PatchInsteadForm.resx">
       <DependentUpon>PatchInsteadForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PatchForms\PatchNewChildForm.resx">
+      <DependentUpon>PatchNewChildForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatchGenerationForm.resx">
       <DependentUpon>PatchGenerationForm.cs</DependentUpon>
