--- a/PatchMaker.Tests/PatchMaker.Tests.csproj
+++ b/PatchMaker.Tests/PatchMaker.Tests.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ExampleXml\v92_sitecore.config" />
+    <None Include="ExampleXml\v92-sitecore.config" />
     <None Include="packages.config" />
     <None Include="ExampleXml\Sitecore.config" />
     <None Include="ExampleXml\v92-runtime.config" />
