--- a/PatchMaker.Tests/PatchMaker.Tests.csproj
+++ b/PatchMaker.Tests/PatchMaker.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ExampleXml\role-namespace.config" />
     <None Include="ExampleXml\v92-sitecore.config" />
     <None Include="packages.config" />
     <None Include="ExampleXml\Sitecore.config" />
