Initial attempt at improving the patch preview with roles. Adding back-end code to process them correctly.

--- a/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
+++ b/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurator.cs" />
+    <Compile Include="MyRuleBasedConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SitecorePatcher.cs" />
   </ItemGroup>
