First pass at a role settings editing / display to preview UI

--- a/PatchMaker.App/PatchMaker.App.csproj
+++ b/PatchMaker.App/PatchMaker.App.csproj
@@ -119,6 +119,12 @@
     <Compile Include="RequiredFieldTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="RoleConfigForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RoleConfigForm.Designer.cs">
+      <DependentUpon>RoleConfigForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TreeNodeExtensions.cs" />
     <Compile Include="XmlFragmentTreeView.cs">
       <SubType>Component</SubType>
@@ -163,6 +169,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RoleConfigForm.resx">
+      <DependentUpon>RoleConfigForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
