--- a/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
+++ b/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Configurator.cs" />
     <Compile Include="MyRuleBasedConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderException.cs" />
     <Compile Include="SitecorePatcher.cs" />
   </ItemGroup>
   <ItemGroup>
