--- a/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
+++ b/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
@@ -53,5 +53,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PatchMaker\PatchMaker.csproj">
+      <Project>{72822d72-e816-4eed-83fb-a59dae1de708}</Project>
+      <Name>PatchMaker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
