Small fixes for initial release of v1.5 (#43)
* Adding alt-key shortcuts to form buttons
* Simple scroll-to on the patch preview
* Ability to step thorough highlighted patches in preview
* Update help.
* Catch generation exceptions, add as comments
* Attempt to resolve bug #41 by preventing patch previewing if generation caused an error comment.
* Help update to match latest changes
* Version update, and standardising metadata for DLLs across product
* Help version number needs to be updated to match app version

--- a/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
+++ b/PatchMaker.Sitecore/PatchMaker.Sitecore.csproj
@@ -47,10 +47,17 @@
     <Compile Include="Configurator.cs" />
     <Compile Include="MyRuleBasedConfigReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderException.cs" />
     <Compile Include="SitecorePatcher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PatchMaker\PatchMaker.csproj">
+      <Project>{72822d72-e816-4eed-83fb-a59dae1de708}</Project>
+      <Name>PatchMaker</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
