--- a/PatchMaker.Tests/PatchMaker.Tests.csproj
+++ b/PatchMaker.Tests/PatchMaker.Tests.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -60,15 +61,21 @@
     <Compile Include="SetAttributeTests.cs" />
     <Compile Include="PatchGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNodeExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ExampleXml\role-namespace.config" />
+    <None Include="ExampleXml\Sitecore.ContentSearch.Solr.DefaultIndexConfiguration.config" />
     <None Include="ExampleXml\v92-sitecore.config" />
     <None Include="packages.config" />
     <None Include="ExampleXml\Sitecore.config" />
     <None Include="ExampleXml\v92-runtime.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PatchMaker.App\PatchMaker.App.csproj">
+      <Project>{B0004E7F-817E-4CD3-91FE-BD9404AAF770}</Project>
+      <Name>PatchMaker.App</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PatchMaker.Sitecore\PatchMaker.Sitecore.csproj">
       <Project>{654e7eea-b1b9-4efa-b262-762cdbc354bc}</Project>
       <Name>PatchMaker.Sitecore</Name>
