--- a/PatchMaker/PatchMaker.csproj
+++ b/PatchMaker/PatchMaker.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SetAttribute.cs" />
     <Compile Include="XDocumentExtensions.cs" />
     <Compile Include="XElementExtensions.cs" />
+    <Compile Include="XmlPreprocessingExtensions.cs" />
     <Compile Include="XNamespaceExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
