--- a/PatchMaker.Tests/PatchMaker.Tests.csproj
+++ b/PatchMaker.Tests/PatchMaker.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="PatchGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeNodeExtensionsTests.cs" />
+    <Compile Include="XElementExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ExampleXml\role-namespace.config" />
