--- a/PatchMaker/PatchMaker.csproj
+++ b/PatchMaker/PatchMaker.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseAttributeChange.cs" />
+    <Compile Include="ConfigRule.cs" />
     <Compile Include="Metadata.cs" />
     <Compile Include="PatchDelete.cs" />
     <Compile Include="ElementInsertPosition.cs" />
