--- a/PatchMaker/PatchMaker.csproj
+++ b/PatchMaker/PatchMaker.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PatchInstead.cs" />
     <Compile Include="SetAttribute.cs" />
+    <Compile Include="StringPathExtensions.cs" />
     <Compile Include="XDocumentExtensions.cs" />
     <Compile Include="XElementExtensions.cs" />
     <Compile Include="XmlPreprocessingExtensions.cs" />
