--- a/PatchMaker/PatchMaker.csproj
+++ b/PatchMaker/PatchMaker.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseAttributeChange.cs" />
+    <Compile Include="ConfigRule.cs" />
     <Compile Include="Metadata.cs" />
     <Compile Include="PatchDelete.cs" />
     <Compile Include="ElementInsertPosition.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PatchInstead.cs" />
     <Compile Include="SetAttribute.cs" />
+    <Compile Include="StringPathExtensions.cs" />
     <Compile Include="XDocumentExtensions.cs" />
     <Compile Include="XElementExtensions.cs" />
     <Compile Include="XmlPreprocessingExtensions.cs" />
