--- a/PatchMaker.App/PatchMaker.App.csproj
+++ b/PatchMaker.App/PatchMaker.App.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CenterWinDialog.cs" />
     <Compile Include="HelpSpawner.cs" />
     <Compile Include="HighlightableTreeNode.cs" />
     <Compile Include="HighlightableTreeView.cs">
