--- a/PatchMaker.Sitecore/packages.config
+++ b/PatchMaker.Sitecore/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net472" />
+  <package id="NuGet.Core" version="2.14.0" targetFramework="net472" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net472" developmentDependency="true" />
 </packages>
